优化了代码，JS更新为ES6标准，减少html代码等。还修复了一些未关闭的标签

--- a/en/main-page-en.html
+++ b/en/main-page-en.html
@@ -20,6 +20,7 @@
 	<title>Vitctor VPN - Proxy Service</title>
 	<link rel="stylesheet" href="../css/loading.css">
 	<script src="../js/loading.js"></script>
+	<script src="../js/main-page.js"></script>
 </head>
 <body>
 	<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
@@ -196,65 +197,4 @@
 		</footer>
 	</div>
 </body>
-<script type="text/javascript">
-	$(window).ready(function(){
-		$('.bkgi').parallax({imageSrc: '../img/mori.jpg'});
-		$('.pt').parallax({imageSrc: '../img/platforms.jpg'});
-		$('.mr').parallax({imageSrc: '../img/morif.jpg'});
-		// dropdown hover
-		$(".dropdown-menu").hover(function(){
-			$(this).removeClass("hover0"); 
-			$(this).stop(true,true).fadeIn('fast'); 
-		},function(){ 
-			$(this).addClass("hover0"); 
-			var menu_hover = $(this).parent().children(".dropdown-toggle"); 
-			var drop_box = $(this); 
-			setTimeout(function(){ 
-			if(menu_hover.hasClass("hover1")){
-				drop_box.stop(true,true).fadeOut('fast'); 
-			}
-			else{} 
-			},100); 
-		}); 
-		$(".dropdown-toggle").hover(function(){
-			$(this).removeClass("hover1"); 
-			$(this).parent().children(".dropdown-menu").stop(true,true).fadeIn('fast'); 
-			},function(){ 
-				var drop_box2 = $(this).parent().children(".dropdown-menu"); 
-					setTimeout(function() { 
-						if (drop_box2.hasClass("hover0")) {
-							drop_box2.stop(true,true).fadeOut('fast'); 
-						}
-						else{} 
-			     		},100); 
-					$(this).addClass("hover1");	
-			});
-			// top menu event
-				var windowHeight = $(window).height();
-					$(window).scroll(function(){
-				var distance = windowHeight - $(window).scrollTop();
-					if(distance < 200){
-						$('.topRight').css("background-color","#333");
-						$('.topRight').css("position","fixed");
-					}
-					else{
-						$('.topRight').css("position","absolute");
-					}
-				});
-			// media query slide event
-			$('.touch_bar').click(function(){
-				$('.slideEvent').slideToggle(200);
-				$('.slideEvent').css("position","fixed");
-			});
-			$('.touch_bar').click(function(){
-				$('.touch_bar').toggleClass("touch_bar1");
-			});
-			$('#hs').click(function(){
-				$('#mq_hide').slideToggle(200);
-			});
-			$('#hs1').click(function(){
-				$('#mq_hide2').slideToggle(200);
-			});	
-	});
-</script>
 </html>
