--- a/en/plan-en.html
+++ b/en/plan-en.html
@@ -142,6 +142,7 @@
 				<p class="mfoot">Handcrafted by Victor © 2017</p>
 			</div>
 		</footer>
+	</div>
 </body>
 <script type="text/javascript">
 	$(window).ready(function(){
