修改了所有head标签内文件头的信息，减少了代码冗余，修复了登录注册页面底部空白的问题，script标签放在了body最底部，修复了其他语言下主页图片不显示的问题

--- a/en/contact-en.html
+++ b/en/contact-en.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="Keywords" content="关键词一，关键词二">
-    <meta name="Description" content="网站描述内容">
-    <meta name="Author" content="Yvette Lau">
+	<meta charset="utf-8" />
     <meta name = "viewport" content = " width = device-width, initial-scale = 1 ">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="../css/menu.css" />
-    <script type="text/javascript" src = "../js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src = "../js/bootstrap.min.js"></script>
-	<meta charset="utf-8" />
 	<link rel="stylesheet" href="../css/font-awesome.min.css" />
 	<link rel="shortcut icon" type="image/x-icon" href="../img/logo-dark.ico" media="screen" >
 	<link rel="stylesheet" type="text/css" href="../css/contact.css" />
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
-	<script src="../js/parallax.js"></script>
-	<title>CONTACT</title>
 	<link rel="stylesheet" href="../css/loading.css">
-	<script src="../js/loading.js"></script>
-	<script src="../js/general.js"></script>
+	<title>CONTACT</title>
 </head>
 <body>
 	<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
@@ -103,5 +93,10 @@
 			<p class="mfoot">Handcrafted by Victor © 2017</p>
 		</div>
 	</footer>
+	<script src="../js/jquery-1.11.0.min.js"></script>
+	<script src="../js/bootstrap.min.js"></script>
+	<script src="../js/loading.js"></script>
+	<script src="../js/general.js"></script>
+	<script src="../js/parallax.js"></script>
 </body>
 </html>
