--- a/tr_zh/main-page-trzh.html
+++ b/tr_zh/main-page-trzh.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="Keywords" content="关键词一，关键词二">
-    <meta name="Description" content="网站描述内容">
-    <meta name="Author" content="Yvette Lau">
+    <meta charset="utf-8" />
     <meta name = "viewport" content = " width = device-width, initial-scale = 1 ">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="../css/menu.css" />
-    <script type="text/javascript" src = "../js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src = "../js/bootstrap.min.js"></script>
-	<meta charset="utf-8" />
 	<link rel="stylesheet" href="../css/font-awesome.min.css" />
 	<link rel="shortcut icon" type="image/x-icon" href="../img/logo-dark.ico" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../css/main-page.css" />
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
-	<script src="../js/parallax.js"></script>
+    <link rel="stylesheet" href="../css/loading.css">
 	<title>Vitctor跨域網絡優化服務 - 科學上網</title>
-	<script src="../js/loading.js"></script>
-	<link rel="stylesheet" href="../css/loading.css">
-	<script src="../js/main-page.js"></script>
 </head>
 <body>
 	<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
@@ -195,5 +185,10 @@
 			</div>
 		</footer>
 	</div>
+    <script src="../js/jquery-1.11.0.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/main-page-other.js"></script>
+    <script src="../js/parallax.js"></script>
+    <script src="../js/loading.js"></script>
 </body>
 </html>
