--- a/sign in-page.html
+++ b/sign in-page.html
@@ -9,8 +9,7 @@
     <meta name = "viewport" content = " width = device-width, initial-scale = 1 ">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/menu.css" />
-    <script type="text/javascript" src = "js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src = "js/bootstrap.min.js"></script>
+
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="css/font-awesome.min.css" />
 	<link rel="shortcut icon" type="image/x-icon" href="img/logo-dark.ico" media="screen" />
@@ -18,8 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<title>登入</title>
     <link rel="stylesheet" href="css/loading.css">
-    <script src="js/loading.js"></script>
-    <script src="js/sign-in.js"></script>
+
 </head>
 <body>
 	<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
@@ -97,6 +95,10 @@
     		</p>
     	</div>
     </div>
+    <script src="js/jquery-1.11.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+	<script src="js/loading.js"></script>
+	<script src="js/sign-in.js"></script>
 </body>
 <script>
     function check()
