--- a/tr_zh/signup-page-trzh.html
+++ b/tr_zh/signup-page-trzh.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="Keywords" content="关键词一，关键词二">
-    <meta name="Description" content="网站描述内容">
-    <meta name="Author" content="Yvette Lau">
+    <meta charset="utf-8" />
     <meta name = "viewport" content = " width = device-width, initial-scale = 1 ">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="../css/menu.css" />
-    <script type="text/javascript" src = "../js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src = "../js/bootstrap.min.js"></script>
-  	<meta charset="utf-8" />
   	<link rel="stylesheet" href="../css/font-awesome.min.css" />
   	<link rel="shortcut icon" type="image/x-icon" href="../img/logo-dark.ico" media="screen" />
   	<link rel="stylesheet" type="text/css" href="../css/signup-page.css" />
   	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
-  	<title>註冊</title>
     <link rel="stylesheet" href="../css/loading.css">
-    <script src="../js/loading.js"></script>
-    <script src="../js/sign-up.js"></script>
+    <title>註冊</title>
 </head>
 <body>
     <a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
@@ -97,7 +88,11 @@
                 </a>。
             </p>
         </div>   
-    </div> 
+    </div>
+    <script src="../js/jquery-1.11.0.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/loading.js"></script>
+    <script src="../js/sign-up.js"></script>
 </body>
 <script>
     function register_check(){
