修改主页路径

--- a/en/main-page-en.html
+++ b/en/main-page-en.html
@@ -32,7 +32,7 @@
 			<a class="bk" href="signup-page-en.html">Sign Up</a>
 			<a class="bk" role="button" id="hs1">English<i class="fa fa-angle-down fa-1x"></i></a>
 			<nav id="mq_hide2">
-				<a class="bk" href="../main-page.html">中文（简体）</a>
+				<a class="bk" href="../index.html">中文（简体）</a>
 				<a class="bk" href="../tr_zh/main-page-trzh.html">中文（繁體）</a>
 			</nav>
 			<p id="hide_content">.</p>
@@ -62,7 +62,7 @@
 				<li class="hx">
 					<a role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >English&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
 					<ul class="dropdown-menu hover0" id="box2" role="menu" aria-labelledby="drop1">
-						<li><a href="../main-page.html">中文（简体）</a></li>
+						<li><a href="../index.html">中文（简体）</a></li>
 						<li><a href="../tr_zh/main-page-trzh.html">中文（繁體）</a></li>
 					</ul>
 				</li>
