--- a/tr_zh/main-page-trzh.html
+++ b/tr_zh/main-page-trzh.html
@@ -33,7 +33,7 @@
 			<a class="bk" role="button" id="hs1">中文（繁體）<i class="fa fa-angle-down fa-1x"></i></a>
 			<nav id="mq_hide2">
 				<a class="bk" href="../en/main-page-en.html">English</a>
-				<a class="bk" href="../main-page.html">中文（簡體）</a>
+				<a class="bk" href="../index.html">中文（簡體）</a>
 			</nav>
 			<p id="hide_content">.</p>
 		</nav>
@@ -63,7 +63,7 @@
 					<a role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >中文（繁體）&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
 					<ul class="dropdown-menu hover0" id="box2" role="menu" aria-labelledby="drop1">
 						<li><a href="../en/main-page-en.html">English</a></li>
-						<li><a href="../main-page.html">中文（簡體）</a></li>
+						<li><a href="../index.html">中文（簡體）</a></li>
 					</ul>
 				</li>
 			</ul>
