--- a/windows_guide.html
+++ b/windows_guide.html
@@ -17,7 +17,7 @@
 	<div id="loadingDiv"><div class = "loader" ></div></div>
 	<div class="slideEvent">
 		<nav class="media_q">
-			<a href="main-page.html">
+			<a href="index.html">
 				<img class="logo_color1" src="img/logo-dark.ico" style="max-height: 35px;">
 			</a>
 			<a class="bk" href="plan.html">套餐</a>
@@ -42,7 +42,7 @@
 		<div class="topRight">
 			<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
 			<div id="logo">
-				<a href="main-page.html">
+				<a href="index.html">
 					<img src="img/logo-light.png">
 				</a>
 			</div>
